finally fixed calendar on mobile

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -326,7 +326,9 @@ hr {
 .simple-calendar td{
   padding: 0px;
 }
-
+.simple-calendar table {
+  zoom: 0.7;
+}
 
 
 
@@ -383,8 +385,8 @@ hr {
 
   /* Rotate first bar */
   .change .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
-    transform: rotate(-45deg) translate(-9px, 6px) ;
+    -webkit-transform: rotate(-45deg) translate(-8px, 8px) ;
+    transform: rotate(-45deg) translate(-8px, 8px) ;
   }
 
   /* Fade out the second bar */
@@ -404,6 +406,9 @@ hr {
   .simple-calendar td{
     padding: 0px;
 
+  }
+  .simple-calendar table {
+    zoom: 0.7;
   }
 
 
@@ -452,6 +457,10 @@ hr {
   .simple-calendar td{
     padding: 6px 6px 60px 6px;
   }
+  .simple-calendar table {
+    zoom: 1;
+  }
+
 
 
 
